# autonoms

./: .gitignore  .readthedocs.yaml  deimos.yml  file-split-6560Cal.nf  file-split.nf  file-split_debug.nf  ms-pipeline.nf  new-pipe.nf  preprocess.nf  pyproject.toml  readme.md  reorganised-pipe.nf  requirements.txt
RapidSky/: CCSCal.py  OverrideImsCal.xml  convertMZML.sh  run.py  splitter.py  splitterExtract.py  splitterExtract_backup_2023-03-03.py
agilent_methods/: 2023-05-04_experiments.ipynb  CCSCal.py  experimentTemplate.xlsx  experimentTemplate_short.xlsx  nextflow.config  plate_map.py  prefect_workflow.py  pywinauto_test.py  rf_local.py  rf_rpyc_server.py  rf_workflows.py  run_experiment.nf  run_rf.ps1  test_kwargs.py  test_prefect.py  test_remote.py  test_utils.py  utils_6560.py  utils_plates.py  utils_rapidFire.py
configs/: example.yml  genesis.json  genesis.toml  genesis.yml
data_analysis/: 2023-04-20_analyze_pilot_yeast.ipynb
docs/: agilent_methods.rst  autonoms.agilent_methods.rst  autonoms.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  intro.rst  mochams.agilent_methods.rst  mochams.rst  modules.rst  requirements.txt  usage.rst
experiment_templates/: experimentTemplate.xlsx  experimentTemplate_short.xlsx  experiment_visit.xlsx  ~$experimentTemplate.xlsx
nextflow_pipelines/: file-split_debug.nf  file-split_noDemult.nf  new-pipe.nf  reorganised-pipe.nf
report_templates/: MoleculeReportCustom.skyr  MoleculeReportShort.skyr
skyline_documents/: IMRes40.sky  IMRes40.sky.view  IMRes40.skyd  IMRes40.skyl  tuneIons.sky  (+8 more)
(+21 files in other folders)
